set(SOURCES
	Bullet/Bullet.cpp
	Bullet/BulletDamageComponent.cpp
	Bullet/BulletDisplayComponent.cpp
	Bullet/BulletFactory.cpp
	Bullet/BulletMovementComponent.cpp
	Creep/Creep.cpp
	Creep/CreepDisplayComponent.cpp
	Creep/CreepFactory.cpp
	Creep/CreepLifeDisplayComponent.cpp
	Creep/CreepQueryService.cpp
	Creep/CreepWalkComponent.cpp
	Decoration.cpp
	Game.cpp
	GameStates/LevelGameState.cpp
	GameStates/LevelSelectGameState.cpp
	GameStates/MenuGameState.cpp
	Level.cpp
	LevelServices.cpp
	Tower/Tower.cpp
	Tower/TowerDisplayComponent.cpp
	Tower/TowerFactory.cpp
	Tower/TowerShootingComponent.cpp
	Tower/TowerTargetingComponent.cpp
)

set(HEADERS
	Bullet/Bullet.hpp
	Bullet/BulletDamageComponent.hpp
	Bullet/BulletDisplayComponent.hpp
	Bullet/BulletFactory.hpp
	Bullet/BulletMovementComponent.hpp
	Constants.hpp
	Creep/Creep.hpp
	Creep/Buff.hpp
	Creep/CreepDisplayComponent.hpp
	Creep/CreepFactory.hpp
	Creep/CreepLifeDisplayComponent.hpp
	Creep/CreepQueryService.hpp
	Creep/CreepWalkComponent.hpp
	Decoration.hpp
	Game.hpp
	GameStates/GameState.hpp
	GameStates/LevelGameState.hpp
	GameStates/LevelSelectGameState.hpp
	GameStates/MenuGameState.hpp
	Level.hpp
	LevelServices.hpp
	MakeUnique.hpp
	Renderable.hpp
	ScopeGuard.hpp
	Selectable.hpp
	Tower/Tower.hpp
	Tower/TowerDisplayComponent.hpp
	Tower/TowerFactory.hpp
	Tower/TowerShootingComponent.hpp
	Tower/TowerTargetingComponent.hpp
)

set(LIBS
	${SFML_LIBRARIES}
	${SFGUI_LIBRARY}
	${THOR_LIBRARY}
)

add_executable(TDGame ${SOURCES} ${HEADERS})
target_link_libraries(TDGame ${LIBS})
